--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -4,8 +4,14 @@
     <dimen name="detail_body_text_size">22sp</dimen>
     <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.25</item>
 
-    <dimen name="fab_elevation">2dp</dimen>
+    <dimen name="fab_elevation">4dp</dimen>
     <dimen name="fab_press_translation_z">6dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
 
+    <dimen name="collapsingToolbarTitleMarginStart">32dp</dimen>
+    <dimen name="collapsingToolbarTitleMarginEnd">64dp</dimen>
+
+    <dimen name="default_margin">8dp</dimen>
+    <dimen name="cardElevation">8dp</dimen>
+    <dimen name="appbarEleation">4dp</dimen>
 </resources>
