--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -5,9 +5,10 @@
                                     android:layout_height="wrap_content"
                                     android:layout_margin="@dimen/default_margin"
                                     android:clickable="true"
-                                    android:elevation="@dimen/cardElevation"
                                     android:focusable="true"
                                     android:foreground="?selectableItemBackground"
+                                    app:cardCornerRadius="@dimen/cardRadius"
+                                    app:cardElevation="@dimen/cardElevation"
                                     app:cardPreventCornerOverlap="false">
 
     <LinearLayout
