--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -20,9 +20,9 @@
         <com.example.xyzreader.ui.DynamicHeightImageView
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
+            android:layout_height="0dp"
             android:scaleType="centerCrop"
+            tools:background="@color/colorAccent"
             tools:layout_height="200dp"
             tools:layout_width="match_parent"
             tools:src="@color/colorPrimary"/>
